# cparse

./: CMakeLists.txt  Makefile  README.md  build.cfg  cparse.mk
include/: bnf.h  ebnf.h  eparser.h  eprs.h  estx.h  esyntax.h  lex.h  lexer.h  parser.h  prs.h  stx.h  syntax.h  tok.h  token.h
include/file/: cfg.h  cfg_parse.h  cfg_prs.h  make.h  toml.h  toml_parse.h
src/: bnf.c  ebnf.c  eparser.c  eprs.c  estx.c  esyntax.c  lex.c  lexer.c  parser.c  prs.c  stx.c  syntax.c  tok.c  token.c
src/file/: cfg.c  cfg_parse.c  cfg_priv.h  cfg_prs.c  make.c  make_priv.h  toml.c  toml_parse.c
test/: main.c  t_bnf.c  t_cfg.c  t_cfg_parse.c  t_cfg_prs.c  t_ebnf.c  t_eparser.c  t_eprs.c  t_estx.c  t_esyntax.c  t_lex.c  t_lexer.c  t_make.c  t_parser.c  t_prs.c  t_stx.c  t_syntax.c  t_tok.c  t_token.c  t_toml.c  t_toml_parse.c
